# udo

./: .gitignore  CMakeLists.txt  INFO.md  LICENSE  README.md  config.json  releaselog.md  resources.qrc  udo.desktop
scripts/: install.sh  uninstall.sh
src/: AboutDialog.cpp  AboutDialog.h  ConfigManager.cpp  ConfigManager.h  DoBar.cpp  DoBar.h  HelpDialog.cpp  HelpDialog.h  HttpAuthDialog.cpp  HttpAuthDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
